Add Lab Exam Practice link to analysis.html

--- a/analysis.html
+++ b/analysis.html
@@ -23,6 +23,7 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="analysis.html" aria-current="page">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+      <li><a href="lab_exam_practice.html">Lab Exam Practice</a></li>
     </ul>
   </nav>
 
