--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,10 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="cv.html">CV</a></li>
-      <li><a href="contact.html" aria-current="page">Contact</a></li>
-      <li><a href="analysis.html">Interaction Analysis</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="analysis.html" aria-current="page">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+      <li><a href="lab_exam_practice.html">Lab Exam Practice</a></li>
     </ul>
   </nav>
 
