--- a/lab_exam_practice.html
+++ b/lab_exam_practice.html
@@ -1,247 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Lab Exam Practice Questions</title>
 
-<title>HCI Lab 01 – HTML Structure & Accessibility</title>
+  <style>
+    body {
+      font-family: Georgia, "Times New Roman", serif;
+      background-color: #ffffff;
+      color: #000;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
 
-<style>
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 20px;
-    line-height: 1.6;
-  }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
 
-  h1, h2 {
-    margin-top: 30px;
-  }
+    h1, h2, h3 {
+      font-weight: bold;
+      margin-top: 40px;
+    }
 
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 15px;
-  }
+    h1 {
+      font-size: 2.2em;
+      text-align: center;
+    }
 
-  caption {
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
+    h2 {
+      font-size: 1.6em;
+      border-bottom: 2px solid #000;
+      padding-bottom: 5px;
+    }
 
-  th, td {
-    border: 1px solid #333;
-    padding: 8px;
-    vertical-align: top;
-  }
+    h3 {
+      font-size: 1.3em;
+      margin-top: 30px;
+    }
 
-  th {
-    background-color: #f2f2f2;
-  }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      font-size: 0.95em;
+    }
 
-  code {
-    font-family: Consolas, monospace;
-  }
-</style>
+    th, td {
+      border: 1px solid #000;
+      padding: 10px;
+      vertical-align: top;
+      text-align: left;
+    }
+
+    th {
+      font-weight: bold;
+      background-color: #f5f5f5;
+    }
+
+    code {
+      font-family: "Courier New", monospace;
+      font-size: 0.9em;
+      white-space: pre-wrap;
+      display: block;
+    }
+
+    .section {
+      margin-top: 50px;
+    }
+
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="container">
 
-<header>
-  <h1>Lab Assignment 01 – Semantic HTML & Accessibility</h1>
-</header>
+    <h1>Lab Exam Practice Questions</h1>
 
-<main>
+    <div class="section">
+      <h2>HTML Mistakes (Identify & Fix)</h2>
 
-<!-- PART A -->
-
-<section>
-<h2>Part A: Find Mistakes (Uncommon HTML Errors)</h2>
-
-<table>
-<caption>Uncommon HTML Mistakes (Identify & Fix)</caption>
-
-<thead>
-<tr>
-<th scope="col">UI Element / Issue</th>
-<th scope="col">Wrong HTML</th>
-<th scope="col">Correct UI Element</th>
-<th scope="col">Correct HTML</th>
-</tr>
-</thead>
-
-<tbody>
-
-<tr>
-<td>Navigation wrapped in div instead of nav</td>
-<td>
-<code>
-&lt;div class="menu"&gt;<br>
-&lt;ul&gt;<br>
-&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
-&lt;/ul&gt;<br>
+      <table>
+        <thead>
+          <tr>
+            <th>UI Element / Issue</th>
+            <th>Wrong HTML (with mistake)</th>
+            <th>Correct UI Element</th>
+            <th>Correct HTML</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Navigation wrapped in div instead of nav</td>
+            <td>
+              <code>
+&lt;div class="menu"&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
 &lt;/div&gt;
-</code>
-</td>
-<td>Semantic navigation landmark</td>
-<td>
-<code>
-&lt;nav aria-label="Main navigation"&gt;<br>
-&lt;ul&gt;<br>
-&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
-&lt;/ul&gt;<br>
+              </code>
+            </td>
+            <td>Semantic navigation landmark</td>
+            <td>
+              <code>
+&lt;nav aria-label="Main navigation"&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
 &lt;/nav&gt;
-</code>
-</td>
-</tr>
+              </code>
+            </td>
+          </tr>
 
-<tr>
-<td>Image has meaningless alt text</td>
-<td><code>&lt;img src="syringe.png" alt="image"&gt;</code></td>
-<td>Accessible image description</td>
-<td><code>&lt;img src="syringe.png" alt="Automatic syringe filling machine interface"&gt;</code></td>
-</tr>
+          <tr>
+            <td>Image has meaningless alt text</td>
+            <td>
+              <code>
+&lt;img src="syringe.png" alt="image"&gt;
+              </code>
+            </td>
+            <td>Accessible image description</td>
+            <td>
+              <code>
+&lt;img src="syringe.png" alt="Automatic syringe filling machine interface"&gt;
+              </code>
+            </td>
+          </tr>
 
-<tr>
-<td>Using br tags for layout spacing</td>
-<td>
-<code>
-&lt;p&gt;Interaction Design&lt;/p&gt;<br>
-&lt;br&gt;&lt;br&gt;<br>
-&lt;p&gt;Assignment&lt;/p&gt;
-</code>
-</td>
-<td>Proper content structure</td>
-<td>
-<code>
-&lt;p&gt;Interaction Design&lt;/p&gt;<br>
-&lt;p&gt;Assignment&lt;/p&gt;
-</code>
-</td>
-</tr>
+          <tr>
+            <td>Using br tags for layout spacing</td>
+            <td>
+              <code>
+&lt;p&gt;Interaction Design&lt;/p&gt;
+&lt;br&gt;&lt;br&gt;
+&lt;p&gt;Assignment 1&lt;/p&gt;
+              </code>
+            </td>
+            <td>Proper content structure</td>
+            <td>
+              <code>
+&lt;p&gt;Interaction Design&lt;/p&gt;
+&lt;p&gt;Assignment 1&lt;/p&gt;
+              </code>
+            </td>
+          </tr>
 
-<tr>
-<td>Button missing type inside form</td>
-<td>
-<code>
-&lt;form&gt;<br>
-&lt;button&gt;Reset&lt;/button&gt;<br>
+          <tr>
+            <td>Button missing type inside form</td>
+            <td>
+              <code>
+&lt;form&gt;
+  &lt;button&gt;Reset&lt;/button&gt;
 &lt;/form&gt;
-</code>
-</td>
-<td>Explicit button behavior</td>
-<td>
-<code>
-&lt;form&gt;<br>
-&lt;button type="button"&gt;Reset&lt;/button&gt;<br>
+              </code>
+            </td>
+            <td>Explicit button behavior</td>
+            <td>
+              <code>
+&lt;form&gt;
+  &lt;button type="button"&gt;Reset&lt;/button&gt;
 &lt;/form&gt;
-</code>
-</td>
-</tr>
+              </code>
+            </td>
+          </tr>
 
-<tr>
-<td>Table missing thead and tbody</td>
-<td>
-<code>
-&lt;table&gt;<br>
-&lt;tr&gt;&lt;th&gt;Model&lt;/th&gt;&lt;th&gt;Predicts&lt;/th&gt;&lt;/tr&gt;<br>
-&lt;tr&gt;&lt;td&gt;GOMS&lt;/td&gt;&lt;td&gt;Time&lt;/td&gt;&lt;/tr&gt;<br>
+          <tr>
+            <td>Table missing thead and tbody</td>
+            <td>
+              <code>
+&lt;table&gt;
+  &lt;tr&gt;&lt;th&gt;Model&lt;/th&gt;&lt;th&gt;Predicts&lt;/th&gt;&lt;/tr&gt;
+  &lt;tr&gt;&lt;td&gt;GOMS&lt;/td&gt;&lt;td&gt;Time&lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-</code>
-</td>
-<td>Structured accessible table</td>
-<td>
-<code>
-&lt;table&gt;<br>
-&lt;thead&gt;<br>
-&lt;tr&gt;<br>
-&lt;th scope="col"&gt;Model&lt;/th&gt;<br>
-&lt;th scope="col"&gt;Predicts&lt;/th&gt;<br>
-&lt;/tr&gt;<br>
-&lt;/thead&gt;<br>
-&lt;tbody&gt;<br>
-&lt;tr&gt;<br>
-&lt;td&gt;GOMS&lt;/td&gt;<br>
-&lt;td&gt;Time&lt;/td&gt;<br>
-&lt;/tr&gt;<br>
-&lt;/tbody&gt;<br>
+              </code>
+            </td>
+            <td>Structured and accessible table</td>
+            <td>
+              <code>
+&lt;table&gt;
+  &lt;thead&gt;
+    &lt;tr&gt;
+      &lt;th scope="col"&gt;Model&lt;/th&gt;
+      &lt;th scope="col"&gt;Predicts&lt;/th&gt;
+    &lt;/tr&gt;
+  &lt;/thead&gt;
+  &lt;tbody&gt;
+    &lt;tr&gt;
+      &lt;td&gt;GOMS&lt;/td&gt;
+      &lt;td&gt;Time&lt;/td&gt;
+    &lt;/tr&gt;
+  &lt;/tbody&gt;
 &lt;/table&gt;
-</code>
-</td>
-</tr>
+              </code>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-</tbody>
-</table>
-</section>
+    <div class="section">
+      <h2>Part B: True / False</h2>
 
-<!-- PART B -->
+      <table>
+        <thead>
+          <tr>
+            <th>Statement</th>
+            <th>Answer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Every link inside &lt;ul&gt; must be placed inside an &lt;li&gt;.</td>
+            <td>True</td>
+          </tr>
+          <tr>
+            <td>A page may have multiple &lt;h1&gt; headings to make text larger.</td>
+            <td>False</td>
+          </tr>
+          <tr>
+            <td>aria-current="page" should be used on the active navigation item.</td>
+            <td>True</td>
+          </tr>
+          <tr>
+            <td>A form is accessible even if it has no &lt;label&gt; elements.</td>
+            <td>False</td>
+          </tr>
+          <tr>
+            <td>KLM predicts execution time for expert, error-free performance.</td>
+            <td>True</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-<section>
-<h2>Part B: True / False</h2>
+    <div class="section">
+      <h2>Part C: Short Answer</h2>
 
-<table>
-<thead>
-<tr>
-<th scope="col">Statement</th>
-<th scope="col">Answer</th>
-</tr>
-</thead>
+      <h3>Difference Between Semantic and Generic Elements</h3>
+      <p>
+        Semantic elements like <code>&lt;nav&gt;</code> describe their meaning clearly,
+        while generic elements like <code>&lt;div&gt;</code> are used only for grouping
+        or styling.
+      </p>
 
-<tbody>
-<tr>
-<td>Every link inside &lt;ul&gt; must be placed inside an &lt;li&gt;.</td>
-<td>True</td>
-</tr>
+      <h3>Why KLM Does Not Model High-Level Planning and Interpretation</h3>
+      <p>
+        KLM predicts execution time for routine expert actions but does not model
+        high-level cognitive processes because they vary between users and are
+        difficult to measure.
+      </p>
+    </div>
 
-<tr>
-<td>A page may have multiple &lt;h1&gt; headings to make text larger.</td>
-<td>False</td>
-</tr>
+    <footer>
+      © 2026 Lab Practice
+    </footer>
 
-<tr>
-<td>aria-current="page" should be used on the active navigation item.</td>
-<td>True</td>
-</tr>
-
-<tr>
-<td>A form is accessible even if it has no &lt;label&gt; elements.</td>
-<td>False</td>
-</tr>
-
-<tr>
-<td>KLM predicts execution time for expert, error-free performance.</td>
-<td>True</td>
-</tr>
-</tbody>
-</table>
-
-</section>
-
-<!-- PART C -->
-
-<section>
-<h2>Part C: Short Answer</h2>
-
-<article>
-<h3>Difference Between Semantic and Generic Elements</h3>
-<p>
-A semantic element such as <code>&lt;nav&gt;</code> clearly describes its purpose and meaning to browsers and assistive technologies, improving accessibility and structure. A generic element such as <code>&lt;div&gt;</code> has no built-in meaning and is used only to group or style content.
-</p>
-</article>
-
-<article>
-<h3>Why KLM Does Not Model High-Level Planning and Interpretation</h3>
-<p>
-The Keystroke-Level Model (KLM) predicts the execution time of routine, expert, error-free physical actions. It does not include high-level planning or interpretation because these cognitive processes vary between users and are difficult to measure precisely.
-</p>
-</article>
-
-</section>
-
-</main>
-
-<footer>
-<p>&copy; HCI Lab Assignment</p>
-</footer>
-
+  </div>
 </body>
 </html>
