--- a/lab_exam_practice.html
+++ b/lab_exam_practice.html
@@ -83,6 +83,16 @@
   <div class="container">
 
     <h1>Lab Exam Practice Questions</h1>
+    <nav aria-label="Primary navigation">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cv.html">CV</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="analysis.html" aria-current="page">Interaction Analysis</a></li>
+      <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+      <li><a href="lab_exam_practice.html">Lab Exam Practice</a></li>
+    </ul>
+  </nav>
 
     <div class="section">
       <h2>HTML Mistakes (Identify & Fix)</h2>
