--- a/lab_exam_practice.html
+++ b/lab_exam_practice.html
@@ -20,6 +20,36 @@
       padding: 0 20px;
     }
 
+    /* Navigation */
+    nav {
+      border-bottom: 2px solid #000;
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    nav li {
+      margin: 0;
+    }
+
+    nav a {
+      color: #000;
+      text-decoration: underline;
+    }
+
+    nav a[aria-current="page"] {
+      font-weight: bold;
+      text-decoration: none;
+    }
+
     h1, h2, h3 {
       font-weight: bold;
       margin-top: 40px;
@@ -28,6 +58,7 @@
     h1 {
       font-size: 2.2em;
       text-align: center;
+      margin-top: 20px;
     }
 
     h2 {
@@ -56,7 +87,6 @@
     }
 
     th {
-      font-weight: bold;
       background-color: #f5f5f5;
     }
 
@@ -82,17 +112,19 @@
 <body>
   <div class="container">
 
-    <h1>Lab Exam Practice Questions</h1>
+    <!-- Navigation -->
     <nav aria-label="Primary navigation">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cv.html">CV</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="analysis.html" aria-current="page">Interaction Analysis</a></li>
-      <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
-      <li><a href="lab_exam_practice.html">Lab Exam Practice</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="analysis.html">Interaction Analysis</a></li>
+        <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+        <li><a href="lab_exam_practice.html" aria-current="page">Lab Exam Practice</a></li>
+      </ul>
+    </nav>
+
+    <h1>Lab Exam Practice Questions</h1>
 
     <div class="section">
       <h2>HTML Mistakes (Identify & Fix)</h2>
